--- a/aws/package.json
+++ b/aws/package.json
@@ -8,6 +8,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@aws-sdk/client-bedrock-runtime": "^3.450.0",
     "@aws-sdk/client-ses": "^3.350.0",
     "@supabase/supabase-js": "^2.38.4"
   },
