--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "test": "cypress open",
     "test:e2e": "cypress run",
     "test:component": "cypress run --component",
-    "test:aws": "jest --config ./aws/jest.config.js"
+    "test:aws": "jest --config ./aws/jest.config.js",
+    "deploy:aws": "bash aws/deploy.sh"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.2",
