--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "test:e2e": "cypress run",
     "test:component": "cypress run --component",
     "test:aws": "jest --config ./aws/jest.config.js",
-    "deploy:aws": "cd aws && ./deploy.sh",
-    "check:aws": "cd aws && ./check-deployment.sh"
+    "deploy:aws": "bash aws/deploy.sh"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.2",
@@ -33,6 +32,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.28.0",
+    "@types/cypress": "^0.1.6",
     "@types/jest": "^29.5.14",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
@@ -40,7 +40,8 @@
     "@typescript-eslint/parser": "^6.21.0",
     "@vitejs/plugin-react": "^4.1.1",
     "autoprefixer": "^10.4.16",
-    "cypress": "^13.6.0",
+    "cypress": "^14.5.0",
+    "dotenv": "^16.6.0",
     "eslint": "^8.57.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.4",
