--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.5",
     "ts-jest": "^29.4.0",
+    "ts-node": "^10.9.1",
     "typescript": "^5.8.3",
     "vite": "^6.3.5"
   }
